Updates deps, deletes native deps